@@ -1,17 +1,18 @@
 package com.linkedin.pegasus.gradle.tasks
 
 
-import com.linkedin.pegasus.gradle.FileCompatibilityType
+import com.linkedin.pegasus.gradle.IOUtil
 import com.linkedin.pegasus.gradle.PegasusPlugin
-import com.linkedin.pegasus.gradle.PropertyUtil
 import com.linkedin.pegasus.gradle.internal.CompatibilityLogChecker
 import com.linkedin.pegasus.gradle.internal.FileExtensionFilter
 import org.gradle.api.DefaultTask
 import org.gradle.api.GradleException
 import org.gradle.api.Project
 import org.gradle.api.file.FileCollection
+import org.gradle.api.tasks.Input
 import org.gradle.api.tasks.InputDirectory
 import org.gradle.api.tasks.InputFiles
+import org.gradle.api.tasks.OutputFile
 import org.gradle.api.tasks.TaskAction
 import org.gradle.process.internal.JavaExecAction
 
@@ -26,23 +27,30 @@ class CheckSnapshotTask extends DefaultTask
   @InputFiles
   FileCollection codegenClasspath
 
+  @Input
+  String snapshotCompatLevel
+
+  @OutputFile
+  File getSummaryTarget()
+  {
+    return summaryTarget
+  }
+
   boolean isModelCompatible = true
   boolean isRestSpecCompatible = true
   boolean isEquivalent = true
   boolean isRestSpecEquivalent = true
-  String wholeMessage = "";
+  String wholeMessage = ""
 
   private static _snapshotFilter = new FileExtensionFilter(PegasusPlugin.SNAPSHOT_FILE_SUFFIX)
+
+  private File summaryTarget = new File(project.buildDir, "reports/checkSnapshot/summary.txt")
 
   @TaskAction
   protected void check()
   {
-    final String snapshotCompatLevel = PropertyUtil.findCompatLevel(project, FileCompatibilityType.SNAPSHOT)
-
     project.logger.info('Checking interface compatibility with API ...')
-
     List<String> argFiles = []
-
     checkSnapshotCompatibility(project, currentSnapshotFiles, previousSnapshotDirectory, _snapshotFilter, argFiles)
 
     if (argFiles.isEmpty())
@@ -66,11 +74,17 @@ class CheckSnapshotTask extends DefaultTask
     isEquivalent = logChecker.getModelCompatibility().isEmpty() && logChecker.getRestSpecCompatibility().isEmpty()
     isRestSpecEquivalent = logChecker.getRestSpecCompatibility().isEmpty()
     wholeMessage = logChecker.getWholeText()
+    IOUtil.writeText(getSummaryTarget(), wholeMessage)
 
     if (!isModelCompatible || !isRestSpecCompatible)
     {
-      throw new GradleException("See output for " + getPath())
+      throw new GradleException("See output for " + getPath() + ". Summary written to " + getSummaryTarget().absolutePath)
     }
+  }
+
+  void setSummaryTarget(File summaryTarget)
+  {
+    this.summaryTarget = summaryTarget
   }
 
   private void checkSnapshotCompatibility(Project project,
